style/style.css
/*
@font-face {
    font-family: 'Helvetica';
    src: url('../assets/fonts/helvetica-webfont.woff2') format('woff2'),
         url('../assets/fonts/helvetica-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;

}
*/

body {
    margin: 0;
    padding: 0;
    background-color: #000 !important;
    /*    font-family: monospace;*/
}

/* start Partical Js */
canvas {
    display: block;
    vertical-align: bottom;
}

/* ---- particles.js container ---- */

#particles-js {
    position: absolute;
    width: 100%;
    height: 100%;
    z-index: 1;
}

#notAdd {
    width: 0;
    height: 0;
}

/* end Partical Js */

/* start back button */

.back {
    position: relative;
    width: 100%;
    font-size: 24px;
    display: inline-block;
    z-index: 2;
}

.back a {
    position: absolute;
    left: 5%;
    top: 50%;
    color: #fff;
    text-decoration: none;
}

.back a:hover {
    color: #fff;
    opacity: 0.5
}

/* end back button   */

/* bootsrap cars edits  */

/*
.card{
    font-family: monospace;
    min-height: 180px;
}

.card .card-body p{
    padding: 0 15px;
}
*/
/* bootsrap cars edits  */


/* start Loading screen */
#loadingScreen {
    width: 100%;
    height: 100%;
    z-index: 99999999;
    position: fixed;
    top: 0;
    left: 0;
    background-color: transparent;
}

#loadingScreen .center {
    left: 50%;
    top: 50%;
    padding: 10px;
    transform: translate(-50%, -50%);
    position: absolute;
}

#loadingScreen .center .circle {
    width: 5px;
    height: 5px;
    border-radius: 50%;
    /*    background-color: #fff;*/
    position: absolute;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
    background-image: radial-gradient(circle, rgba(255, 255, 255, 1), rgba(255, 255, 255, 0.2));
}

#loadingScreen .center .animate1 {
    animation: circleAnim 2s ease alternate infinite;
}

#loadingScreen .center .animate2 {
    z-index: 5;
    /*    background-color: #000;*/
    background-image: radial-gradient(circle, #000, #000);
    animation: circleAnim2 2s ease alternate infinite;
}

#loadingScreen .center .animate1::after {
    content: '';
    width: 5px;
    height: 5px;
    border-radius: 50%;
    position: absolute;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
    background-image: radial-gradient(circle, #000, #000);
    animation: circleAnim2 1s ease alternate infinite;
}

#loadingScreen .center .animate2::after {
    content: '';
    width: 5px;
    height: 5px;
    border-radius: 50%;
    position: absolute;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
    background-image: radial-gradient(circle, rgba(255, 255, 255, 1), rgba(255, 255, 255, 0.5));
    animation: circleAnim2 1s ease alternate infinite;
}

#loadingScreen .hide {
    animation: hideOpacity 0.5s linear;
    opacity: 0;
}

#loadingScreen .leftPart,
#loadingScreen .rightPart {
    width: 50%;
    height: 100%;
    position: absolute;
    background-color: #000;
    top: 0;
}

#loadingScreen .leftPart {
    left: 0;
}

#loadingScreen .rightPart {
    right: 0;
}

#loadingScreen .animationLeft {
    animation: openLeft 5s linear;
    animation-delay: 2s;
}

#loadingScreen .animationRight {
    animation: openRight 5s linear;
    animation-delay: 2s;
}

/* end Loading screen */

/* main wrapper */

#main-wrapper {
    background-color: #000;
    position: relative;
    z-index: 3;
}

#main-wrapper .centerLogo {
    position: absolute;
    width: 50%;
    padding: 10px;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
    text-align: center;
    /*    background-color: firebrick;*/
    display: flex;
    max-width: 390px;
    min-width: 300px;
    height: 10%;
    z-index: 2;
}

#main-wrapper .centerLogo p {
    font-size: 28px;
    font-weight: bolder;
    color: #fff;
    font-family: fantasy;
    width: 50%;
    margin: 0;
    float: left;
    align-self: center;
    align-content: center;
    align-items: center;
}

#main-wrapper .centerLogo i {
    color: #000;
    font-size: 26px;
    float: left;
    width: 25%;
    align-self: center;
    align-content: center;
    align-items: center;
}

#main-wrapper .upCenter {
    position: absolute;
    width: 30%;
    padding: 10px;
    /*    background-color: firebrick;*/
    color: #000;
    height: 45%;
    display: flex;
    /*    align-self: center;*/
    /*    align-items: center;*/
    /*    align-content: center;*/
    /*    justify-content: center;*/
    text-align: center;
    top: 0;
    left: 50%;
    transform: translateX(-50%);
    flex-direction: column;
    z-index: 2;
}

#main-wrapper .upCenter p,
#main-wrapper .bottomCenter p {
    width: 100%;
    height: 33.3333%;
    color: #fff;
    padding: 10px;
    font-size: 21px;
    text-transform: uppercase;

    align-items: center;
    justify-content: center;
    display: flex;

    color: rgba(255, 255, 255, 0.2);
    font-family: fantasy;

    border: 1px dashed rgba(255, 255, 255, 0.2);
}

#main-wrapper .bottomCenter #hide {
    color: #000;
    border: 1px dashed rgba(255, 255, 255, 0.3);
}

#main-wrapper .bottomCenter {
    position: absolute;
    width: 30%;
    padding: 10px;
    /*    background-color: firebrick;*/
    color: #000;
    height: 45%;
    display: flex;
    /*    align-self: center;*/
    /*    align-items: center;*/
    /*    align-content: center;*/
    /*    justify-content: center;*/
    text-align: center;
    bottom: 0;
    left: 50%;
    transform: translateX(-50%);
    flex-direction: column;
    z-index: 2;
}


#main-wrapper .upLeft,
#main-wrapper .bottomLeft,
#main-wrapper .upRight,
#main-wrapper .bottomRight {
    position: absolute;
    width: 35%;
    padding: 10px;
    /*    background-color: firebrick;*/
    color: #000;
    height: 45%;
    display: flex;
    align-self: center;
    align-items: center;
    align-content: center;
    text-align: center;
    justify-content: center;
}
/* ... */

